# pocs

./: .gitignore
context/ai/agents/raquel/: .env.example  .gitignore  Cargo.toml  README.md  REQUIREMENTS.md
context/ai/agents/raquel/src/: cli.rs  db.rs  github.rs  grader.rs  main.rs
context/ai/prompt/: pr_markdown_comment_prompt.md
context/ai/recommendation/: requirements.txt
context/games/godot/: README.md
context/ia/prompt/: pr_markdown_comment_prompt.md
dart/data_extract_dart/: .gitignore
dart/socket/: pubspec.yaml
dart/viacep/: pubspec.yaml
dart/viacep/web/: index.html  main.dart  styles.css
dart/weather_search/: pubspec.yaml
flutter/apitesting/: README.md
flutter/apitesting/lib/: fetch_books.dart  main.dart
flutter/apitesting/test/: fetch_book_test.dart
flutter/bmi/lib/: constants.dart
flutter/destini/: pubspec.yaml
flutter/destini/lib/: main.dart  story.dart  story_brain.dart
flutter/dicee/: README.md
flutter/flash_chat/: pubspec.yaml
flutter/i_am_rich/: pubspec.yaml
flutter/magic_8_ball/: pubspec.yaml
flutter/unittest/: pubspec.yaml
flutter/weather/: pubspec.yaml
flutter/xylophone/: README.md  pubspec.yaml
java/turboflix/: build.sbt
javascript/chunk/: aaaa.js  package.json  test.js
javascript/pdfmerger/: merger.js  package-lock.json  package.json
languages/c/netrunning/: .gitignore  CMakeLists.txt  Dockerfile  README.md
languages/c/netrunning/lib/: floor.h  program.c  program.h  test_program.c
languages/c/netrunning/src/: builder.ui  main.c
languages/mojo/: .gitignore
languages/mojo/basic/copy/: copy.mojo  pixi.toml  pyproject.toml
languages/mojo/miji/basic/control/: ifelse.mojo  ifelse.py  loops.mojo  pixi.toml  pyproject.toml
languages/mojo/miji/basic/functions/: functions.mojo  functions.py  pixi.toml  pyproject.toml
languages/mojo/miji/lists/: lists.mojo  lists.py  pixi.toml  pyproject.toml
languages/mojo/miji/python_comparison/str_example/: multiplication_table.py  mutiplication_table.mojo  pyproject.toml
languages/mojo/miji/python_comparison/triangle/: pixi.toml  pyproject.toml  triangle.py
languages/mojo/python_comparison/list_sort/: pixi.toml  pyproject.toml
languages/python/tech_resources/core/django-example/services/patrons/: pyproject.toml
languages/python/tech_resources/core/django-example/services/patrons/config/: asgi.py  urls.py
languages/python/tech_resources/core/django-example/services/patrons/config/settings/: base.py  dev.py
languages/python/tech_resources/core/django-example/services/patrons/patrons/: apps.py
languages/python/tech_resources/core/django-example/services/patrons/patrons/api/v1/: views.py
languages/python/tech_resources/core/ex_gg/: README.md  pyproject.toml
languages/python/tech_resources/core/ex_gg/brainrot_info/: __init__.py  brainrots.json  core.py
languages/reactNative/: README.md
languages/rust/bitonic/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
languages/rust/bitonic/migrations/: 0001_init.sql
languages/rust/bitonic/src/: lib.rs  main.rs
languages/rust/memkafka/: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
languages/rust/memkafka/src/: app.rs  error.rs  main.rs  state.rs
languages/rust/memkafka/src/consumers/: event.rs  mod.rs  order.rs
languages/rust/memkafka/src/handlers/: event.rs  health.rs  mod.rs  order.rs
languages/rust/memkafka/src/models/: event.rs  health.rs  mod.rs  order.rs
languages/rust/memkafka/src/routes/: event.rs  health.rs  mod.rs  order.rs
languages/rust/web_api/: Cargo.toml  Dockerfile  README.md
languages/rust/web_api/.sqlx/: query-123d9e6d5fcadaeea574ec13a03da5e0c5e17c3029720b722648209a91f8fb63.json  query-157ac18600ac91ba09b913c392e7bfb2a5e850cce64e6171282c3d5ad2108991.json  query-1664282150638d9b31420c8f1a630f93429f4bdaee6463377e82c889fbdd0c5a.json  query-18a29f34ec8df6250772b90a632432a528a1e9e8d691fa5b41bf06376534167a.json  query-1c0953a7ce057318786f2df3a6d4adc77507dd5493024f57c43cafed8a10b3c3.json  query-1f3541aa6e0ddb26a858068991f6fe3a05f9795c606c35e5393181ed4f9f7151.json  query-40a9cf81cf72d1741da33d95e77d71c9ed8f2f2f04b3d02e24593d0f9948b9ff.json  query-47fb2831bb362ec188acbf7ba82654568ee6ba6ada5699cb1bb5010a0364e5ba.json  query-7fd20f52aea7af6190fc00d8bb98893f9bc88e9871d43e2d79fc3e96cb5e0320.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-978c6a76deeb259eee31dfc27359efcbc9e05501ae4184d7ffb453407d5e1ea9.json  query-b6205f6dcef044b800784e330603b74a347be09fa2eb275a3f63e6824a6b447c.json  query-bb9aa6c7624f07a45853d30e39e22f685927bd51ab8a49acc72890217af2c940.json  query-e6a2a9cab7eb0f436d024cfd84cc849c967bef743dd87438310db32c9327d4ad.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
languages/rust/web_api/bruno/: collection.bru
languages/rust/web_api/bruno/auth/: Sign-in.bru  Sign-up.bru
languages/rust/web_api/bruno/categories/: DELETE Category.bru  GET Categories.bru  GET Category Transactions.bru  GET Category.bru  POST Category.bru  PUT Category.bru
languages/rust/web_api/bruno/environments/: Local.bru
languages/rust/web_api/bruno/profile/: GET Profile.bru  PUT Profile.bru
languages/rust/web_api/bruno/transactions/: DELETE Transaction.bru  GET Transaction.bru  GET Transactions.bru  POST Transaction.bru  PUT Transaction.bru
languages/rust/web_api/migrations/: 20250205143836_create_user_table.up.sql  20250205204053_create_categories.up.sql  20250206143834_create_transactions.down.sql  20250206143834_create_transactions.up.sql
languages/rust/web_api/src/: main.rs
languages/rust/web_api/src/controllers/: auth.rs  categories.rs  transactions.rs  user.rs
languages/rust/web_api/src/db/: categories.rs  mod.rs  transactions.rs  user.rs
languages/rust/web_api/src/middleware/: auth.rs
languages/rust/web_api/src/services/: user.rs
python/accounts_management/: README.md  requirements.txt
python/mutation_test/: README.md  requirements.txt
python/theeye/: Dockerfile  README.md  requirements.txt
zig/ziglings/: 002_std.zig  003_assignment.zig  004_arrays.zig
(+2291 files in other folders)
