[project]
name = "lists"
version = "0.1.0"
description = "Python lists examples"
authors = [
    {name = "Thiago Nascimento", email = "dungeoncraw@gmail.com"}
]
requires-python = ">=3.8"
dependencies = []

[tool.uv]
managed = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
