[project]
name = "functions"
version = "0.1.0"
description = "Python functions examples"
authors = [
    {name = "Thiago Nascimento", email = "dungeoncraw@gmail.com"}
]
requires-python = ">=3.8"
dependencies = []

[tool.uv]
managed = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
