[project]
name = "triangle"
version = "0.1.0"
description = "Python and Mojo comparison - class example"
authors = [
    {name = "Thiago Nascimento", email = "dungeoncraw@gmail.com"}
]
requires-python = ">=3.8"
dependencies = []

[tool.uv]
managed = true

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
