[project]
name = "patrons-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Thiago Nascimento",email = "dungeoncraw@gmail.com"}
]
package-mode = false
requires-python = ">=3.14,<4.0"
dependencies = [
    "django (>=6.0.1,<7.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "psycopg[binary] (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
